# LinkedList

./: CMakeLists.txt  Jenkinsfile  README.md  main.cpp  node.h
headers/: linkedlist.h
include/: CMakeLists.txt  linkedlist.h  node.h
tests/: CMakeLists.txt  test.cpp  test2.cpp  test_add.cpp  test_get.cpp  test_slice.cpp
